# lqg-first-principles-gravitational-constant

./: .gitignore  README.md  UQ-TODO-RESOLVED.ndjson  UQ-TODO.ndjson  VACUUM_SELECTION_UQ_RESOLUTION_COMPLETE.md  VnV-TODO.ndjson  lqg-first-principles-gravitational-constant.code-workspace  pyproject.toml  run_enhanced.py  test_accuracy.py  test_enhanced.py  test_enhanced_accuracy.py  test_quick.py  test_ultra_high_precision.py  test_uq_demo.py
docs/: ENHANCED_FRAMEWORK_SUMMARY.md  FINAL_RESULTS.md  G_TO_G(X)_SCALAR_TENSOR_IMPLEMENTATION.md  README_COMPLETE.md  technical-documentation.md
examples/: complete_derivation_example.py
src/: __init__.py  advanced_optimizer.py  comprehensive_analysis.py  einstein_field_equations.py  gravitational_constant.py  holonomy_flux_algebra.py  iteration_summary.py  lqg_gravitational_uq.py  scalar_tensor_extension.py  scalar_tensor_lagrangian.py  simplified_vacuum_uq_test.py  stress_energy_tensor.py  test_exact.py  test_scalar_tensor_integration.py  vacuum_selection_uq_resolution.py
