[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lqg_first_principles_gravitational_constant"
version = "0.1.0"
description = "LQG First Principles Gravitational Constant Framework"
authors = [
  { name = "Arcticoder" }
]
readme = "README.md"
license = { text = "Unlicense" }
dependencies = [
  "numpy>=1.24",
  "scipy>=1.8",
  "matplotlib>=3.6"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lqg_first_principles_gravitational_constant*"]
